--- a/package.json
+++ b/package.json
@@ -38,12 +38,15 @@
     "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
     "install": "^0.12.1",
-    "npm": "^6.4.1",
+    "npm": "^6.9.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-redux": "^7.0.3",
     "react-router-dom": "^4.3.1",
-    "react-spinners": "^0.3.3"
+    "react-spinners": "^0.3.3",
+    "redux": "^4.0.1"
   }
 }
